syntax = "proto3";
package kk_etcd;
option go_package = "/api_def";

//add role
message RoleAdd {
  message Input {
    string  Name = 1;
  }

  message Output {
  }
}